kenny: moved public and private keys to backend.